# Machine-Learning

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  Utility_Facets_Dive_Colab.ipynb  diabetes_risk_assessment.ipynb  disease-diagnostic-from-symptoms.ipynb  disease_diagnostic_from_symptoms.ipynb  disease_symptoms_data_analysis.ipynb  heart_disease_risk_assessment.ipynb  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  install-dependencies.sh
2018/README/: Episheet.xls  IncidenceRateIncidenceProportion.xls  LICENSE  OffStatsAss4A_2023.xlsx
2018/model/: trained_model.pkl
Analyzing-Books/: Analyzing-Amazon-Books.ipynb  book_reviews_2022-12-13-12.csv  book_reviews_2022-12-14-12.csv
Archive/README/: IncidencePrevalenceDuration.xls
Archive/Regression-Analysis/: README.md
Archive/analyzing-books/: Analyzing-Amazon-Books.ipynb
Archive/disease-prediction/: disease_symptoms_data_analysis_Excel.ipynb
Archive/sketcher/: index.html
Archive/utilities/: External_data_Drive,_Sheets,_and_Cloud_Storage.ipynb  (+2 more)
DeepRacer/: L200-Improved-Reward-Function.py
analytics/: README.md
data_science/: __init__.py  dataset.py  features.py  plots.py
dataset/: disease_symptom_df_pivoted.csv  disease_symptom_nodetable.csv
disease-prediction/: disease_symptoms_data_analysis_Excel.ipynb  heart_disease_risk_assessment.ipynb
docs/: docusaurus.config.js  docusaurus.config.ts  mkdocs.yml  package.json  sidebars.js  sidebars.ts
dot-files/: decision-tree-top10.dot  decision-tree.dot
sketcher/: Sketcher.ipynb  main.js  test.html
(+70 files in other folders)
